app/src/theme/utilities.css
.ion-text-bold {
  font-weight: bold;
}
.ion-text-normal {
  font-weight: normal !important;
}

.ion-text-ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.ion-icon-text {
  transform: translateY(2px);
  padding-left: 2px;
  padding-right: 2px;
}

.bag-color-select-icon {
  border: 2px solid transparent;
  border-radius: 100%;
}
.bag-color-select-button:hover .bag-color-select-icon {
  border-color: var(--ion-color-medium);
}

.bag-color-select-button:active .bag-color-select-icon {
  border-color: var(--ion-color-primary);
}
.bag-color-select-button:hover {
  opacity: 100 !important;
}

.bagslist-bag-icon {
  transition: 50ms linear transform;
}
.bagslist-bag-icon:active {
  transform: scale(110%);
}
.bagslist-bag-icon:hover {
  transform: scale(103%);
}

